<resources>
    <string name="app_name">DBUser</string>
    <string name="agenda">Agenda</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="consultar">C. por ID</string>
    <string name="id_a_buscar">Id a buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consulta_nombre">Consulta Nombre</string>
</resources>